fixed wrong position

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -445,7 +445,10 @@ ul.row {
 
 .card-work .card-title a::after {
     position: absolute;
-    position: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     content: "";
 }
 
